# qianchujie.github.io

./: README.md  index.html  index.txt  obdq.html
1/: 1  1.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c  main1
Otsu/: CMakeCache.txt  CMakeLists.txt  Makefile  Otsu  Otsu.cpp  cmake_install.cmake
cany/: CMakeCache.txt  CMakeLists.txt  Makefile  cany  cany.cpp  cmake_install.cmake
erzhihua/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  erzhihua  erzhihua.cpp
imread/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imread  imread.cpp
laplaci/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  laplaci  laplaci.cpp
prewitt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  prewitt  prewitt.cpp
qtopenvideo/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtopenvideo.pro
soble/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  soble  soble.cpp
yuan/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  yuan  yuan.cpp
zhifangtu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  zhifangtu  zhifangtu.cpp
zhixian/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  zhixian  zhixian.cpp
