CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME demo)
PROJECT(1)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

MESSAGE(STATUS "Project: ${PROJECT_NAME}")
MESSAGE(STATUS "OpenCV library status:")
MESSAGE(STATUS "    version: ${OpenCV_VERSION}")
MESSAGE(STATUS "    libraries: ${OpenCV_LIBS}")
MESSAGE(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")

ADD_EXECUTABLE(1 1.cpp)
TARGET_LINK_LIBRARIES(1 ${OpenCV_LIBS})

